--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "FicSullana",
-  "name": "FicSullana",
+  "short_name": "PRESTAMO-DEMO",
+  "name": "PRESTAMO-DEMO",
   "icons": [
     {
       "src": "favicon.ico",
